# FYLIA-

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  SUMMARY.md  USAGE.md  examples.py  fylia.py  pyproject.toml  requirements.txt  verify.py  verify.sh
.github/: copilot-instructions.md
src/fylia/: __init__.py  cli.py  mapgen.py  patcher.py  tui.py
src/fylia/providers/: __init__.py  mock.py
tests/: __init__.py  run_tests.py  test_mapgen.py  test_mock_provider.py  test_patcher.py  test_providers.py
