[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fylia"
version = "0.1.0"
description = "FYLIA - Sviluppo conversazionale in Termux"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "FYLIA Contributors"}
]
keywords = ["cli", "tui", "ai", "code-assistant", "termux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
fylia = "fylia.cli:main"

[project.urls]
Homepage = "https://github.com/meseb/FYLIA-"
Repository = "https://github.com/meseb/FYLIA-"
Issues = "https://github.com/meseb/FYLIA-/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fylia = ["py.typed"]
